RESOLVED FIXED 81380
clang warning unused variable when ENABLE(TEXT_CARET) is disabled
https://bugs.webkit.org/show_bug.cgi?id=81380
Summary clang warning unused variable when ENABLE(TEXT_CARET) is disabled
Joseph Pecoraro
Reported 2012-03-16 11:49:39 PDT
In FrameSelection.cpp LayoutRect oldAbsoluteCaretRepaintBounds = m_absoluteCaretRepaintBounds; is only used inside of ENABLE(TEXT_CARET). So there is an unused variable warning when that is disabled.
Attachments
[PATCH] Proposed Fix (1.65 KB, patch)
2012-03-16 11:51 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2012-03-16 11:51:33 PDT
Created attachment 132335 [details] [PATCH] Proposed Fix
WebKit Review Bot
Comment 2 2012-03-16 15:27:15 PDT
Comment on attachment 132335 [details] [PATCH] Proposed Fix Clearing flags on attachment: 132335 Committed r111079: <http://trac.webkit.org/changeset/111079>
WebKit Review Bot
Comment 3 2012-03-16 15:27:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.