<http://webkit.org/b/81380> clang warning unused variable when ENABLE(TEXT_CARET) is disabled

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-03-16
Reviewed by Dan Bernstein.

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::recomputeCaretRect):
Put the variable inside of a guard because it is only
used inside of a guard.

Canonical link: https://commits.webkit.org/98629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111079 268f45cc-cd09-0410-ab3c-d52691b4dbfc